# easy_upload

./: README.md  pyproject.toml
src/easy_upload/: cli.py
src/easy_upload/commands/: repo.py  upload.py
